Updating Upcoming Games card to collapse and Fixed issues with top players Stats not properly displaying

--- a/assets/global.css
+++ b/assets/global.css
@@ -68,3 +68,9 @@
 #mvpRookieContainer{
     border-radius: 2vh;
 }
+#debug{
+    border: solid red 4px;
+}
+#playerStatWidth{
+    width: 85%;
+}
